--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   badges: ^1.1.1
   cached_network_image: ^2.2.0+1
   animations: ^1.1.2
+  dio: ^3.0.10
+  shimmer: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
