--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   animations: ^1.1.2
   dio: ^3.0.10
   shimmer: ^1.1.1
+  liquid_pull_to_refresh: ^2.0.0
+  shape_of_view: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
