--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   shimmer: ^1.1.1
   liquid_pull_to_refresh: ^2.0.0
   shape_of_view: ^1.0.2
+  auto_size_text: ^2.1.0
+  expandable_bottom_sheet: ^0.2.1+1
+  google_maps_flutter: ^0.5.30
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
