--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   auto_size_text: ^2.1.0
   expandable_bottom_sheet: ^0.2.1+1
   google_maps_flutter: ^0.5.30
+  progress_dialog: ^1.2.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
