--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+4
   rxdart: ^0.24.1
   razorpay_flutter: ^1.2.2
-
-
+  loading_overlay: ^0.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
