--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   stacked_hooks: ^0.1.1+3
   # navigation
   auto_route: ^0.5.0
-  stacked_services: 0.4.4+3
+  stacked_services: ^0.5.4+3
   # inversion of control
+  get: ^3.11.1
   get_it: ^4.0.2
   injectable: ^0.4.0+1
   flutter_hooks: ^0.9.0
