--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   rflutter_alert: ^1.0.3
   flutter_holo_date_picker: ^0.1.3+3
-  websafe_svg: ^1.1.0
+#  websafe_svg: ^1.1.0
   introduction_screen: ^1.0.9
   carousel_slider: ^1.4.1
   flutter_multi_carousel: ^1.0.0
@@ -68,6 +68,7 @@ dependencies:
   rxdart: ^0.24.1
   razorpay_flutter: ^1.2.2
   loading_overlay: ^0.2.1
+  flutter_svg: ^0.19.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
