--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   razorpay_flutter: ^1.2.2
   loading_overlay: ^0.2.1
   flutter_svg: ^0.19.0
+  animate_do: ^1.7.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
