--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   loading_overlay: ^0.2.1
   flutter_svg: ^0.19.0
   animate_do: ^1.7.3
+  visibility_detector: ^0.1.5
+  scroll_to_index: ^1.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
