--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   visibility_detector: ^0.1.5
   scroll_to_index: ^1.0.6
   carousel_slider: ^2.3.1
+  photo_view: ^0.10.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
