--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   animations: ^1.1.2
   dio: ^3.0.10
+  http: ^0.12.2
   shimmer: ^1.1.1
   liquid_pull_to_refresh: ^2.0.0
   shape_of_view: ^1.0.2
@@ -73,6 +74,9 @@ dependencies:
   scroll_to_index: ^1.0.6
   carousel_slider: ^2.3.1
   photo_view: ^0.10.2
+  flutter_pdfview: ^1.0.3+5
+  path_provider: ^1.6.21
+  permission_handler: ^5.0.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
