--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^0.15.4
   location: ^3.0.2
   provider: ^4.3.1
+  connectivity: ^2.0.0
   shared_preferences: ^0.5.7+3
   rflutter_alert: ^1.0.3
   flutter_holo_date_picker: ^0.1.3+3
