--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   flutter_pdfview: ^1.0.3+5
   path_provider: ^1.6.21
   permission_handler: ^5.0.1+1
+  pretty_dio_logger: ^1.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
